Fix getConfigInUse() method in JsonReaderFactoryImpl